# py-euclid

./: .gitignore  README.md  data.json  main.py  pyproject.toml
geometrie/basis/: form.py
geometrie/daten/: loader.py
geometrie/figuren/: __init__.py  dreieck.py  ellipse.py  polygon.py  viereck.py
geometrie/pfade/: __init__.py  polylinie.py
geometrie/primitive/: __init__.py  elemente.py
