[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-euclid"
version = "0.6.0"
description = "Eine professionelle Geometrie-Bibliothek"
authors = [
  { name="Dein Name", email="dein@email.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/oliver-devs/py-euclid"
